--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Go Green & Financial Hub</title>
+    <title>Eco-Memo</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
     <link rel="manifest" href="/manifest.json">
@@ -14,7 +14,7 @@
         <button id="menu-toggle" class="menu-toggle" aria-label="Buka Menu Samping">
             <i class="fas fa-bars"></i>
         </button>
-        <h1>Go Green Hub</h1>
+        <h1>Eco-Memo</h1>
     </header>
 
     <aside id="side-menu" class="side-menu">
@@ -170,7 +170,7 @@
                 <h2>Tentang Aplikasi</h2>
             </div>
             <div class="about-content card">
-                <h3>Go Green Hub</h3>
+                <h3>Eco-Memo</h3>
                 <p>Aplikasi ini dirancang untuk membantu Anda mengelola catatan, melacak keuangan, dan menemukan produk ramah lingkungan untuk gaya hidup yang lebih berkelanjutan.</p>
                 <p>Dikembangkan dengan ❤️ oleh Saskia Bunga Anjani</p>
                 <p>Versi: 1.0.0</p>
