--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                     <li>Rekomendasi Produk Go Green</li>
                     <li>Desain Responsif & Fungsionalitas Offline (PWA)</li>
                 </ul>
-                <p class="copyright">&copy; 2025 Go Green Hub. All rights reserved.</p>
+                <p class="copyright">&copy; 2025 Eco-Memo. All rights reserved.</p>
             </div>
         </section>
     </main>
