--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             <div class="about-content card">
                 <h3>Eco-Memo</h3>
                 <p>Aplikasi ini dirancang untuk membantu Anda mengelola catatan, melacak keuangan, dan menemukan produk ramah lingkungan untuk gaya hidup yang lebih berkelanjutan.</p>
-                <p>Dikembangkan dengan ❤️ oleh Saskia Bunga Anjani</p>
+                <p>Dikembangkan dengan ❤️ oleh Tim Octian</p>
                 <p>Versi: 1.0.0</p>
                 <h4>Fitur Utama:</h4>
                 <ul>
